Prevent hair clipping on character create

--- a/src/style.css
+++ b/src/style.css
@@ -268,8 +268,8 @@ input[type="password"] {
 
 #create-character-preview {
   position: absolute;
-  top: 92px;
-  right: 68px;
+  top: 75px;
+  right: 47px;
 }
 
 #create-character-name {
